# gtk-rs-macros

./: .gitignore  Cargo.toml  README.md
demo/: Cargo.toml  main.rs  test.glade
macros/: Cargo.toml
macros/src/: glade_macro.rs  glade_xml.rs  lib.rs  metadata.rs
