[package]
name = "gtk-rs-macro-demo"
version = "0.1.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"
description = "GTK Macros"
repository = ""
keywords = []
categories = []
license = "MIT"
readme = "README.md"

[workspace]
members = [
    "demo",
    "macros",
]

[dependencies]
# gtk = { git = "https://github.com/gtk-rs/gtk.git", features = ["v3_20"]}
gtk = { version = "0.7", features = ["v3_20"]}
gio = "0.7"
gtk_macros = { path = "macros" }

[[bin]]
name = "gtk-rs-mac-demo"
path = "demo/main.rs"
