[package]
name = "demo"
version = "0.1.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"
description = "GTK Macros"
repository = ""
keywords = []
categories = []
license = "MIT"
workspace = ".."
#readme = "README.md"

[dependencies]
gtk = { version = "0.7", features = ["v3_16"]}
gio = "0.7"
gtk_macros = { path = "../macros" }

[[bin]]
name = "demo"
path = "main.rs"
