[package]
name = "gtk_macros"
version = "0.1.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
#serde_xml = "0.9"
serde-xml-rs = "0.3"

[lib]
name = "gtk_macros"
proc-macro = true